--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
         "php-open-source-saver/jwt-auth": "1.4.2",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "yajra/laravel-oci8": "9"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.8",
